# arm_benchmarking

./: .gitignore  01-setup.md  02-hardware-detection.md  03-baseline.md  04-compiler-optimizations.md  05-simd-optimizations.md  06-memory-optimizations.md  07-concurrency-optimizations.md  08-system-optimizations.md  09-profiling-analysis.md  10-performance-analysis.md  CMakeLists.txt  CONTRIBUTING.md  Makefile  PGO_IMPROVEMENTS_SUMMARY.md  README.md  RESTART_CONTEXT.md  TUTORIAL_OVERVIEW.md  baseline_matrix  combo_O0_generic_medium_80656_32167  combo_O0_neoverse_medium_74770_9292  combo_O1_generic_medium_74770_5982  combo_O2_generic_medium_80656_16826  combo_O2_native_medium_80656_359  combo_O2_neoverse_medium_80656_8026  combo_O3_generic_medium_80656_2335  install-deps.sh  manual.txt  native.txt  optimized_arch  optimized_neoverse  quick-start.sh  test_bolt_minimal.sh  test_matrix
dashboard/: README.md  dashboard.js  index.html  package.json  server.js  server.py  styles.css
neoverse-tutorial/: CMakeCache.txt
q/: 2  3  rules.md
results/: baseline_analysis.txt  baseline_medium.txt  baseline_micro.txt  baseline_profile.txt  baseline_profile_medium.txt  baseline_profile_micro.txt  baseline_profile_small.txt  baseline_small.txt  baseline_summary.txt  compiler_opts_summary.txt  opt_O1_small.txt  opt_O2_small.txt  opt_O3_small.txt  opt_arch_small.txt  opt_neoverse_small.txt
results/detailed/: metrics_small.txt
results/matrix/: O0_generic.txt  O0_generic_small.txt  O0_native.txt  O1_generic.txt  O1_generic_micro.txt  O1_neoverse.txt  O2_native.txt  O2_neoverse.txt  O2_neoverse_medium.txt  O3_generic.txt  O3_native.txt  O3_neoverse.txt
scripts/: benchmark-status.sh  comprehensive-test-analysis.sh  install-deps.sh
scripts/01/: configure  install-deps.sh  setup-project.sh
scripts/02/: detect-crypto.sh  detect-features.sh  detect-lse.sh  detect-neon-crypto.sh  detect-neon.sh  detect-sve.sh  detect-sve2.sh  verify-cache.sh  verify-cpu.sh  verify-features.sh  verify-numa.sh  verify-system.sh
scripts/03/: collect-baseline.sh  detailed-metrics.sh
scripts/04/: apply_pgo_improvements.sh  bolt_utils.sh  compare-sizes.sh  execution_utils.sh  improved_pgo_section.sh  pgo_integration_patch.sh  pgo_utils.sh  simple_pgo_test.sh  test-all-combinations-old-broken.sh  test-all-combinations-parallel.sh  test-all-combinations.sh  test-all-combinations.sh.backup  test-compiler-matrix.sh  test-compiler-opts.sh  test_bolt.sh  test_bolt_integration.sh  test_pgo_improvements.sh
src/: baseline_matrix.c  optimized_matrix.c
test_pgo/: test_gen  test_use
